--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/logoGr.svg">
 </head>
 <body>
-    <a href="https://wa.link/zyvacx" target="_blank" class="btn-whats"><img src="images/whatsapp.png" width="45px"
+    <a href="https://wa.me/4421201926" target="_blank" class="btn-whats"><img src="images/whatsapp.png" width="45px"
             alt=""></a>
 
 
